Big revamp towards iServe 2. Simpler management of resources and further decoupling from the technologies used in the backend. Dropped a number of unnecessary elements too. Much still remains to be done